--- a/me.css
+++ b/me.css
@@ -1,13 +1,15 @@
 .pp{
     background-color: black;
     color: white;
-    text-align: left;
+    text-align: center;
     width: fit-content;
     display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
 li{
     list-style-type: none;
-    padding: 20px;
+    padding: 10px;
 }
